Users can now change their email, display name and preferred language (the latter turned off for now, until we have a proper translation)

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -162,5 +162,11 @@
     "seatingMeFirst": "You will play first.",
     "seatingMeSecond": "Your opponent will play first.",
     "seatingRandom": "Seating will be random.",
-    "and": "and"
+    "and": "and",
+    "UserSettings": "User Settings",
+    "DisplayName": "Display name",
+    "EMail": "e-mail",
+    "Language": "Preferred language",
+    "Change": "Change",
+    "EMailCode": "e-mailed code"
 }
