--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,4 +1,172 @@
 {
-    "Welcome": "Bienvenu à Abstract Play!",
-    "Make time for games": "Prenez le temps de jouer"
+    "Welcome": "[FR] Bienvenu à Abstract Play!",
+    "Make time for games": "[FR] Prenez le temps de jouer",
+    "Abstract Play": "[FR] Abstract Play",
+    "Menu": "[FR] Menu",
+    "AvailableGames": "[FR] Available Games",
+    "About": "[FR] About",
+    "Games": "[FR] Games",
+    "LogIn": "[FR] Log In",
+    "LogOut": "[FR] Log Out",
+    "Login Error": "[FR] Login Error",
+    "Error": "[FR] Error!",
+    "Generic login error message": "[FR] An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
+    "YourGames": "[FR] Your games",
+    "YourMove": "[FR] Your move",
+    "NoYourMove": "[FR] No games waiting for your move.",
+    "OpponentMove": "[FR] Opponent's move",
+    "NoOpponentMove": "[FR] No games waiting on opponent's move.",
+    "CompletedGames": "[FR] Completed Games",
+    "YourChallenges": "[FR] Your challenges",
+    "ChallengeResponse": "[FR] Response needed",
+    "NoChallengeResponse": "[FR] No challenges needing a response",
+    "WaitingResponse": "[FR] Waiting on response",
+    "NoWaitingResponse": "[FR] No challenges waiting on response",
+    "Challenge Details": "[FR] Challenge Details",
+    "NewChallenge": "[FR] New challenge",
+    "RevokeChallenge": "[FR] Revoke challenge",
+    "RevokeAcceptance": "[FR] Revoke acceptance",
+    "Close": "[FR] Close",
+    "Cancel": "[FR] Cancel",
+    "Save": "[FR] Save",
+    "Accept": "[FR] Accept",
+    "Reject": "[FR] Reject",
+    "Respond": "[FR] Respond",
+    "Challenge": "[FR] Challenge",
+    "View": "[FR] View",
+    "IssueChallenge": "[FR] Issue a new challenge",
+    "ChallengeDescriptionNoVariants": "[FR] You issued a challenge for a game of {{game}}.",
+    "ChallengeDescriptionVariants": "[FR] You issued a challenge for a game of {{game}} with variants {{variants}}.",
+    "ChallengeDescriptionNoVariantsAccepter": "[FR] You accepted a challenge from {{challenger}} for a game of {{game}}.",
+    "ChallengeDescriptionVariantsAccepter": "[FR] You accepted a challenge from {{challenger}} for a game of {{game}} with variants {{variants}}.",
+    "OtherPlayers": "[FR] So far the following other players are willing to participate in the game: {{others}}.",
+    "PlayersAccepted": "[FR] So far the following players are willing to participate in the game: {{others}}.",
+    "TwoPlayersChallengeDescriptionVariants": "[FR] You challenged {{other}} to a game of {{game}} with variants {{variants}}.",
+    "TwoPlayersChallengeDescriptionNoVariants": "[FR] You challenged {{other}} to a game of {{game}}.",
+    "Notes": "[FR] Notes: ",
+    "ChallengerNotes": "[FR] Challenger notes: ",
+    "ChallengeDetails": "[FR] Challenge details:",
+    "ChallengeClock": "[FR] The clock start time will be {{start}} hours, incremented by {{inc}} hours after each move, with a maximum of {{max}} hours.",
+    "HardTime": "[FR] Hard time: the system will enforce time limits.",
+    "SoftTime": "[FR] No hard time: a loss on time need to be claimed by the opponent.",
+    "NumChallenge2": "[FR] There will be 2 players in this game.",
+    "NumChallenge": "[FR] There will be {{num}} players in this game. {{players}}. Seating will be random.",
+    "NoOtherPlayersAccepted": "[FR] No other players have accepted yet.",
+    "OtherPlayersAccepted": "[FR] The following other players have already accepted: {{others}}",
+    "ChallengeResponseDescVars": "[FR] {{opp}} challenged you to a game of {{game}} with variants: {{variants}}",
+    "ChallengeResponseDescVars1": "[FR] {{opp}} challenged you to a game of {{game}} with variant: {{variants}}",
+    "ChallengeResponseDescNoVars": "[FR] {{opp}} challenged you to a game of {{game}} with no variants",
+    "Select": "[FR] select",
+    "ChooseGame": "[FR] Choose a game: ",
+    "ChooseOpponent": "[FR] Choose an opponent: ",
+    "ConfigureClock": "[FR] Clock Settings",
+    "ChooseClockStart": "[FR] Clock start",
+    "ChooseClockIncrement": "[FR] Clock increment",
+    "ChooseClockMax": "[FR] Clock max",
+    "ChooseClockHard": "[FR] Hard Clock?",
+    "HelpClockHard": "[FR] A hard clock is enforced by the system.",
+    "HelpClockStart": "[FR] Time on clock at the start of the game.",
+    "HelpClockIncrement": "[FR] Time added after every move.",
+    "HelpClockMax": "[FR] Remaining time won't become more than this.",
+    "HardTimeSet": "[FR] Hard time",
+    "NotHardTime": "[FR] No hard limit",
+    "Increment": "[FR] increment {{inc}} hours",
+    "MaxTime": "[FR] max time {{max}} hours",
+    "NoUsers": "[FR] No users!",
+    "NewProfile": "[FR] Create profile",
+    "ProfileName": "[FR] Your desired display name. It must be unique across names currently in use and those recently used.",
+    "ProfileCountry": "[FR] 2 Character Country code of where you want to tell people you're from",
+    "ProfileTagline": "[FR] A free-form tagline (255 characters max)",
+    "ProfileAnon": "[FR] Would you like to be anonymous?",
+    "ProfileConsent": "[FR] Do you consent to the Abstract Play's terms of service and the privacy policy?",
+    "TimeRemaining": "[FR] Time remaining: ",
+    "ClaimTimeOut": "[FR] Claim win on time",
+    "ChooseMove": "[FR] Choose move: ",
+    "EnterMove": "[FR] Enter/Click a move:",
+    "OppsMove": "[FR] Opponent's move",
+    "ChallengeFrom": "[FR] {{game}} challenge from {{challenger}}",
+    "ChallengedTwoPlayers": "[FR] {{game}} against {{other}}",
+    "ChallengedNoOthers": "[FR] {{game}}, no other players yet.",
+    "ChallengedOthers": "[FR] {{game}}, other players: {{others}}",
+    "GameAgainst": "[FR] {{game}} against {{opp}}",
+    "WelcomePlayer": "[FR] Dashboard for {{me}}",
+    "ToMove": "[FR] {{player}} to move.",
+    "Variant": "[FR] Variant",
+    "Variants": "[FR] Variants",
+    "Waiting": "[FR] Waiting on other players to submit their moves",
+    "Player": "[FR] Player",
+    "History": "[FR] History",
+    "Current": "[FR] Current",
+    "Explore": "[FR] Explore",
+    "Status": "[FR] Status",
+    "MakeMove": "[FR] Make a move",
+    "Board": "[FR] Board",
+    "Moves": "[FR] Moves",
+    "Submit": "[FR] Submit",
+    "CompleteMove": "[FR] Complete move",
+    "SubmitMove": "[FR] Submit your move: {{move}}",
+    "Resign": "[FR] Resign",
+    "ConfirmResign": "[FR] Confirm resignation",
+    "ConfirmResignDesc": "[FR] Are you sure you want to resign?",
+    "ConfirmTimeout": "[FR] Out of time",
+    "ConfirmTimeoutDesc": "[FR] Your opponent is out of time. Are you sure you want to claim the win?",
+    "Claim": "[FR] Claim",
+    "GameIsOver": "[FR] The game has ended",
+    "Winning": "[FR] Mark this move as winning",
+    "Losing": "[FR] Mark this move as losing",
+    "GoBegin": "[FR] Show beginning of game. Keys: Home or 'h'.",
+    "GoPrev": "[FR] Show previous move. Keys: left arrow or 'j'.",
+    "GoNext": "[FR] Show next move (and first variant if any). Keys: right arrow or 'k'.",
+    "GoNextVar": "[FR] Show next move variant. Keys: down arrow or 'm'.",
+    "GoPrevVar": "[FR] Show previous variant. Keys: up arrow or 'i'.",
+    "GoCurrent": "[FR] Show current position. Keys: End or 'l'.", 
+    "PickVariant": "[FR] Select a variant",
+    "PickOneVariant": "[FR] Select at most one of:",
+    "PickAnyVariant": "[FR] Select any of:",
+    "SelectAGame": "[FR] Please select a game",
+    "SelectAnOpponent": "[FR] Please select an opponent",
+    "SelectOpponents": "[FR] Please select {{count}} opponents",
+    "SelectSeating": "[FR] Select seating, that is in what order players will start the game.",
+    "ChangeRenderOptions": "[FR] Change board display options",
+    "ChooseColors": "[FR] Choose colors",
+    "Color": "[FR] Select color scheme",
+    "StandardColorsLong": "[FR] Standard colours (9 max)",
+    "ColorBlindLong": "[FR] Colour-blind-friendly colours (4 max)",
+    "ColorPatternsLong": "[FR] Black-and-white patterns (10 max)",
+    "StandardColors": "[FR] Standard",
+    "ColorBlind": "[FR] Colour blind",
+    "ColorPatterns": "[FR] Black and white",
+    "Level": "[FR] Where would you like these colors applied?",
+    "LevelAll": "[FR] For all games",
+    "LevelMetaGame": "[FR] For all {{game}} games",
+    "LevelGame": "[FR] Only for this game",
+    "ChooseAnnotations": "[FR] Annotate?",
+    "Annotate": "[FR] Show last move indicators",
+    "AnnotationLevel": "[FR] Where would you like this choice applied?",
+    "DisplaySettings": "[FR] Display Settings",
+    "Rotate": "[FR] Rotate board",
+    "MarkAsWin": "[FR] Mark as win",
+    "MarkAsLoss": "[FR] Mark as loss",
+    "Comment": "[FR] Comment",
+    "CommentTooLong": "[FR] Comments can be at most 4K characters",
+    "CommentsTooLong": "[FR] You are approaching that max total size of comments for a game. Soon new comments won't be accepted.",
+    "MyDashboard": "[FR] Play",
+    "IncludeDrawOffer": "[FR] include draw offer with move",
+    "IncludeAcceptDrawOffer": "[FR] a draw has been offered. Do you accept?",
+    "AcceptDraw": "[FR] Accept draw offer",
+    "NumPlayers": "[FR] Number of players:",
+    "Seating": "[FR] Seating:",
+    "SeatingRandom": "[FR] Random",
+    "Seating1": "[FR] I play first",
+    "Seating2": "[FR] I play second",
+    "seatingMeFirst": "[FR] You will play first.",
+    "seatingMeSecond": "[FR] Your opponent will play first.",
+    "seatingRandom": "[FR] Seating will be random.",
+    "and": "[FR] and",
+    "UserSettings": "[FR] User Settings",
+    "DisplayName": "[FR] Display name",
+    "EMail": "[FR] e-mail",
+    "Language": "[FR] Preferred language",
+    "Change": "[FR] Change",
+    "EMailCode": "[FR] e-mailed code"
 }
