--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -1,4 +1,172 @@
 {
     "Welcome": "Benvenuto a Abstract Play!",
-    "Make time for games": "Prendi il tempo per i giochi"
+    "Make time for games": "Prendi il tempo per i giochi",
+    "Abstract Play": "[IT] Abstract Play",
+    "Menu": "[IT] Menu",
+    "AvailableGames": "[IT] Available Games",
+    "About": "[IT] About",
+    "Games": "[IT] Games",
+    "LogIn": "[IT] Log In",
+    "LogOut": "[IT] Log Out",
+    "Login Error": "[IT] Login Error",
+    "Error": "[IT] Error!",
+    "Generic login error message": "[IT] An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
+    "YourGames": "[IT] Your games",
+    "YourMove": "[IT] Your move",
+    "NoYourMove": "[IT] No games waiting for your move.",
+    "OpponentMove": "[IT] Opponent's move",
+    "NoOpponentMove": "[IT] No games waiting on opponent's move.",
+    "CompletedGames": "[IT] Completed Games",
+    "YourChallenges": "[IT] Your challenges",
+    "ChallengeResponse": "[IT] Response needed",
+    "NoChallengeResponse": "[IT] No challenges needing a response",
+    "WaitingResponse": "[IT] Waiting on response",
+    "NoWaitingResponse": "[IT] No challenges waiting on response",
+    "Challenge Details": "[IT] Challenge Details",
+    "NewChallenge": "[IT] New challenge",
+    "RevokeChallenge": "[IT] Revoke challenge",
+    "RevokeAcceptance": "[IT] Revoke acceptance",
+    "Close": "[IT] Close",
+    "Cancel": "[IT] Cancel",
+    "Save": "[IT] Save",
+    "Accept": "[IT] Accept",
+    "Reject": "[IT] Reject",
+    "Respond": "[IT] Respond",
+    "Challenge": "[IT] Challenge",
+    "View": "[IT] View",
+    "IssueChallenge": "[IT] Issue a new challenge",
+    "ChallengeDescriptionNoVariants": "[IT] You issued a challenge for a game of {{game}}.",
+    "ChallengeDescriptionVariants": "[IT] You issued a challenge for a game of {{game}} with variants {{variants}}.",
+    "ChallengeDescriptionNoVariantsAccepter": "[IT] You accepted a challenge from {{challenger}} for a game of {{game}}.",
+    "ChallengeDescriptionVariantsAccepter": "[IT] You accepted a challenge from {{challenger}} for a game of {{game}} with variants {{variants}}.",
+    "OtherPlayers": "[IT] So far the following other players are willing to participate in the game: {{others}}.",
+    "PlayersAccepted": "[IT] So far the following players are willing to participate in the game: {{others}}.",
+    "TwoPlayersChallengeDescriptionVariants": "[IT] You challenged {{other}} to a game of {{game}} with variants {{variants}}.",
+    "TwoPlayersChallengeDescriptionNoVariants": "[IT] You challenged {{other}} to a game of {{game}}.",
+    "Notes": "[IT] Notes: ",
+    "ChallengerNotes": "[IT] Challenger notes: ",
+    "ChallengeDetails": "[IT] Challenge details:",
+    "ChallengeClock": "[IT] The clock start time will be {{start}} hours, incremented by {{inc}} hours after each move, with a maximum of {{max}} hours.",
+    "HardTime": "[IT] Hard time: the system will enforce time limits.",
+    "SoftTime": "[IT] No hard time: a loss on time need to be claimed by the opponent.",
+    "NumChallenge2": "[IT] There will be 2 players in this game.",
+    "NumChallenge": "[IT] There will be {{num}} players in this game. {{players}}. Seating will be random.",
+    "NoOtherPlayersAccepted": "[IT] No other players have accepted yet.",
+    "OtherPlayersAccepted": "[IT] The following other players have already accepted: {{others}}",
+    "ChallengeResponseDescVars": "[IT] {{opp}} challenged you to a game of {{game}} with variants: {{variants}}",
+    "ChallengeResponseDescVars1": "[IT] {{opp}} challenged you to a game of {{game}} with variant: {{variants}}",
+    "ChallengeResponseDescNoVars": "[IT] {{opp}} challenged you to a game of {{game}} with no variants",
+    "Select": "[IT] select",
+    "ChooseGame": "[IT] Choose a game: ",
+    "ChooseOpponent": "[IT] Choose an opponent: ",
+    "ConfigureClock": "[IT] Clock Settings",
+    "ChooseClockStart": "[IT] Clock start",
+    "ChooseClockIncrement": "[IT] Clock increment",
+    "ChooseClockMax": "[IT] Clock max",
+    "ChooseClockHard": "[IT] Hard Clock?",
+    "HelpClockHard": "[IT] A hard clock is enforced by the system.",
+    "HelpClockStart": "[IT] Time on clock at the start of the game.",
+    "HelpClockIncrement": "[IT] Time added after every move.",
+    "HelpClockMax": "[IT] Remaining time won't become more than this.",
+    "HardTimeSet": "[IT] Hard time",
+    "NotHardTime": "[IT] No hard limit",
+    "Increment": "[IT] increment {{inc}} hours",
+    "MaxTime": "[IT] max time {{max}} hours",
+    "NoUsers": "[IT] No users!",
+    "NewProfile": "[IT] Create profile",
+    "ProfileName": "[IT] Your desired display name. It must be unique across names currently in use and those recently used.",
+    "ProfileCountry": "[IT] 2 Character Country code of where you want to tell people you're from",
+    "ProfileTagline": "[IT] A free-form tagline (255 characters max)",
+    "ProfileAnon": "[IT] Would you like to be anonymous?",
+    "ProfileConsent": "[IT] Do you consent to the Abstract Play's terms of service and the privacy policy?",
+    "TimeRemaining": "[IT] Time remaining: ",
+    "ClaimTimeOut": "[IT] Claim win on time",
+    "ChooseMove": "[IT] Choose move: ",
+    "EnterMove": "[IT] Enter/Click a move:",
+    "OppsMove": "[IT] Opponent's move",
+    "ChallengeFrom": "[IT] {{game}} challenge from {{challenger}}",
+    "ChallengedTwoPlayers": "[IT] {{game}} against {{other}}",
+    "ChallengedNoOthers": "[IT] {{game}}, no other players yet.",
+    "ChallengedOthers": "[IT] {{game}}, other players: {{others}}",
+    "GameAgainst": "[IT] {{game}} against {{opp}}",
+    "WelcomePlayer": "[IT] Dashboard for {{me}}",
+    "ToMove": "[IT] {{player}} to move.",
+    "Variant": "[IT] Variant",
+    "Variants": "[IT] Variants",
+    "Waiting": "[IT] Waiting on other players to submit their moves",
+    "Player": "[IT] Player",
+    "History": "[IT] History",
+    "Current": "[IT] Current",
+    "Explore": "[IT] Explore",
+    "Status": "[IT] Status",
+    "MakeMove": "[IT] Make a move",
+    "Board": "[IT] Board",
+    "Moves": "[IT] Moves",
+    "Submit": "[IT] Submit",
+    "CompleteMove": "[IT] Complete move",
+    "SubmitMove": "[IT] Submit your move: {{move}}",
+    "Resign": "[IT] Resign",
+    "ConfirmResign": "[IT] Confirm resignation",
+    "ConfirmResignDesc": "[IT] Are you sure you want to resign?",
+    "ConfirmTimeout": "[IT] Out of time",
+    "ConfirmTimeoutDesc": "[IT] Your opponent is out of time. Are you sure you want to claim the win?",
+    "Claim": "[IT] Claim",
+    "GameIsOver": "[IT] The game has ended",
+    "Winning": "[IT] Mark this move as winning",
+    "Losing": "[IT] Mark this move as losing",
+    "GoBegin": "[IT] Show beginning of game. Keys: Home or 'h'.",
+    "GoPrev": "[IT] Show previous move. Keys: left arrow or 'j'.",
+    "GoNext": "[IT] Show next move (and first variant if any). Keys: right arrow or 'k'.",
+    "GoNextVar": "[IT] Show next move variant. Keys: down arrow or 'm'.",
+    "GoPrevVar": "[IT] Show previous variant. Keys: up arrow or 'i'.",
+    "GoCurrent": "[IT] Show current position. Keys: End or 'l'.", 
+    "PickVariant": "[IT] Select a variant",
+    "PickOneVariant": "[IT] Select at most one of:",
+    "PickAnyVariant": "[IT] Select any of:",
+    "SelectAGame": "[IT] Please select a game",
+    "SelectAnOpponent": "[IT] Please select an opponent",
+    "SelectOpponents": "[IT] Please select {{count}} opponents",
+    "SelectSeating": "[IT] Select seating, that is in what order players will start the game.",
+    "ChangeRenderOptions": "[IT] Change board display options",
+    "ChooseColors": "[IT] Choose colors",
+    "Color": "[IT] Select color scheme",
+    "StandardColorsLong": "[IT] Standard colours (9 max)",
+    "ColorBlindLong": "[IT] Colour-blind-friendly colours (4 max)",
+    "ColorPatternsLong": "[IT] Black-and-white patterns (10 max)",
+    "StandardColors": "[IT] Standard",
+    "ColorBlind": "[IT] Colour blind",
+    "ColorPatterns": "[IT] Black and white",
+    "Level": "[IT] Where would you like these colors applied?",
+    "LevelAll": "[IT] For all games",
+    "LevelMetaGame": "[IT] For all {{game}} games",
+    "LevelGame": "[IT] Only for this game",
+    "ChooseAnnotations": "[IT] Annotate?",
+    "Annotate": "[IT] Show last move indicators",
+    "AnnotationLevel": "[IT] Where would you like this choice applied?",
+    "DisplaySettings": "[IT] Display Settings",
+    "Rotate": "[IT] Rotate board",
+    "MarkAsWin": "[IT] Mark as win",
+    "MarkAsLoss": "[IT] Mark as loss",
+    "Comment": "[IT] Comment",
+    "CommentTooLong": "[IT] Comments can be at most 4K characters",
+    "CommentsTooLong": "[IT] You are approaching that max total size of comments for a game. Soon new comments won't be accepted.",
+    "MyDashboard": "[IT] Play",
+    "IncludeDrawOffer": "[IT] include draw offer with move",
+    "IncludeAcceptDrawOffer": "[IT] a draw has been offered. Do you accept?",
+    "AcceptDraw": "[IT] Accept draw offer",
+    "NumPlayers": "[IT] Number of players:",
+    "Seating": "[IT] Seating:",
+    "SeatingRandom": "[IT] Random",
+    "Seating1": "[IT] I play first",
+    "Seating2": "[IT] I play second",
+    "seatingMeFirst": "[IT] You will play first.",
+    "seatingMeSecond": "[IT] Your opponent will play first.",
+    "seatingRandom": "[IT] Seating will be random.",
+    "and": "[IT] and",
+    "UserSettings": "[IT] User Settings",
+    "DisplayName": "[IT] Display name",
+    "EMail": "[IT] e-mail",
+    "Language": "[IT] Preferred language",
+    "Change": "[IT] Change",
+    "EMailCode": "[IT] e-mailed code"
 }
