Standing challenges (and other challenges cleanup/bugs)

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,27 +35,30 @@
     "Challenge": "Challenge",
     "View": "View",
     "IssueChallenge": "Issue a new challenge",
-    "ChallengeDescriptionNoVariants": "You issued a challenge for a game of {{game}}.",
-    "ChallengeDescriptionVariants": "You issued a challenge for a game of {{game}} with variants {{variants}}.",
-    "ChallengeDescriptionNoVariantsAccepter": "You accepted a challenge from {{challenger}} for a game of {{game}}.",
-    "ChallengeDescriptionVariantsAccepter": "You accepted a challenge from {{challenger}} for a game of {{game}} with variants {{variants}}.",
+    "ChallengeDescription": "You issued a challenge for a game of {{game}}",
+    "ChallengeDescriptionAccepter": "You accepted a challenge from {{challenger}} for a game of {{game}}",
+    "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of {{game}}",
+    "StandingChallengeDescription": "Standing challenge for a game of {{game}}",
+    "ChallengeResponseDesc": "{{opp}} challenged you to a game of {{game}}",
+    "WithVariants": " with variant {{variants}}.",
+    "WithVariants_plural": " with variants {{variants}}.",
+    "WithVariants_0": ".",
     "OtherPlayers": "So far the following other players are willing to participate in the game: {{others}}.",
     "PlayersAccepted": "So far the following players are willing to participate in the game: {{others}}.",
-    "TwoPlayersChallengeDescriptionVariants": "You challenged {{other}} to a game of {{game}} with variants {{variants}}.",
-    "TwoPlayersChallengeDescriptionNoVariants": "You challenged {{other}} to a game of {{game}}.",
+    "NoOtherPlayersAccepted": "No other players have accepted yet.",
+    "OtherPlayersAccepted": "The following other players have already accepted: {{others}}",
     "Notes": "Notes: ",
     "ChallengerNotes": "Challenger notes: ",
     "ChallengeDetails": "Challenge details:",
     "ChallengeClock": "The clock start time will be {{start}} hours, incremented by {{inc}} hours after each move, with a maximum of {{max}} hours.",
     "HardTime": "Hard time: the system will enforce time limits.",
     "SoftTime": "No hard time: a loss on time need to be claimed by the opponent.",
+    "ChooseRated": "Rated?",
+    "HelpRated": "This game will be rated.",
+    "HelpUnRated": "This game will not be rated.",
     "NumChallenge2": "There will be 2 players in this game.",
     "NumChallenge": "There will be {{num}} players in this game. {{players}}. Seating will be random.",
-    "NoOtherPlayersAccepted": "No other players have accepted yet.",
-    "OtherPlayersAccepted": "The following other players have already accepted: {{others}}",
-    "ChallengeResponseDescVars": "{{opp}} challenged you to a game of {{game}} with variants: {{variants}}",
-    "ChallengeResponseDescVars1": "{{opp}} challenged you to a game of {{game}} with variant: {{variants}}",
-    "ChallengeResponseDescNoVars": "{{opp}} challenged you to a game of {{game}} with no variants",
+    "NumStandingChallenge": "There will be {{num}} players in this game. Seating will be random.",
     "Select": "select",
     "ChooseGame": "Choose a game: ",
     "ChooseOpponent": "Choose an opponent: ",
@@ -65,11 +68,14 @@
     "ChooseClockMax": "Clock max",
     "ChooseClockHard": "Hard Clock?",
     "HelpClockHard": "A hard clock is enforced by the system.",
+    "HelpClockSoft": "A win on time must be claimed by the player.",
     "HelpClockStart": "Time on clock at the start of the game.",
     "HelpClockIncrement": "Time added after every move.",
     "HelpClockMax": "Remaining time won't become more than this.",
     "HardTimeSet": "Hard time",
     "NotHardTime": "No hard limit",
+    "RatedGame": "This will be a rated game.",
+    "UnratedGame": "This will be an unrated game.",
     "Increment": "increment {{inc}} hours",
     "MaxTime": "max time {{max}} hours",
     "NoUsers": "No users!",
@@ -124,6 +130,9 @@
     "PickOneVariant": "Select at most one of:",
     "PickAnyVariant": "Select any of:",
     "SelectAGame": "Please select a game",
+    "StandingChallengeLabel": "Standing challenge?",
+    "StandingChallenge": "This will be a standing challenge. Anyone can accept.",
+    "StandardChallenge": "Standard challenge: you select opponents to challenge.",
     "SelectAnOpponent": "Please select an opponent",
     "SelectOpponents": "Please select {{count}} opponents",
     "SelectSeating": "Select seating, that is in what order players will start the game.",
@@ -170,5 +179,26 @@
     "EMail": "e-mail",
     "Language": "Preferred language",
     "Change": "Change",
-    "EMailCode": "e-mailed code"
+    "EMailCode": "e-mailed code",
+    "StandingChallenges": "Standing Challenges for {{name}}",
+    "StandingChallenges2": "Standing Challenges",
+    "NoStandingChallenges": "No standing challenges",
+    "tblHeaderChallenger": "Challenger",
+    "tblHeaderPlayers": "Players",
+    "tblHeaderAccepted": "Accepted",
+    "tblHeaderSeating": "Seating",
+    "tblHeaderVariants": "Variants",
+    "tblHeaderHardClock": "Hard clock?",
+    "tblHeaderClockStart": "Clock start",
+    "tblHeaderClockIncrement": "Clock increment",
+    "tblHeaderClockMax": "Clock max",
+    "tblHeaderRated": "Rated?",
+    "tblHeaderRespond": "Respond",
+    "Random": "Random",
+    "ChallengerFirst": "Challenger plays first",
+    "ChallengerSecond": "Challenger plays second",
+    "Yes": "Yes",
+    "No": "No",
+    "Accepted": "Accepted!",
+    "Revoke": "Revoke"
 }
