--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -118,8 +118,7 @@
     "ConfirmTimeoutDesc": "Your opponent is out of time. Are you sure you want to claim the win?",
     "Claim": "Claim",
     "GameIsOver": "The game has ended",
-    "Winning": "Mark this move as winning",
-    "Losing": "Mark this move as losing",
+    "Winning": "Mark this move as winning for this player",
     "GoBegin": "Show beginning of game. Keys: Home or 'h'.",
     "GoPrev": "Show previous move. Keys: left arrow or 'j'.",
     "GoNext": "Show next move (and first variant if any). Keys: right arrow or 'k'.",
