Fix i18 plurals (for i18next 21)

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -40,9 +40,9 @@
     "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of {{game}}",
     "StandingChallengeDescription": "Standing challenge for a game of {{game}}",
     "ChallengeResponseDesc": "{{opp}} challenged you to a game of {{game}}",
-    "WithVariants": " with variant {{variants}}.",
-    "WithVariants_plural": " with variants {{variants}}.",
-    "WithVariants_0": ".",
+    "WithVariants_one": " with variant {{variants}}.",
+    "WithVariants_other": " with variants {{variants}}.",
+    "WithVariants_zero": ".",
     "OtherPlayers": "So far the following other players are willing to participate in the game: {{others}}.",
     "PlayersAccepted": "So far the following players are willing to participate in the game: {{others}}.",
     "NoOtherPlayersAccepted": "No other players have accepted yet.",
@@ -207,14 +207,14 @@
     "tblHeaderPlayer": "Player {{num}}",
     "CurrentGamesList": "Current {{name}} Games",
     "CompletedGamesList": "Completed {{name}} Games",
-    "CurrentGamesCount": "current game",
-    "CurrentGamesCount_plural": "current games",
-    "CompletedGamesCount": "completed game",
-    "CompletedGamesCount_plural": "completed games",
-    "StandingChallengesCount": "standing challenge",
-    "StandingChallengesCount_plural": "standing challenges",
-    "RatedPlayersCount": "rated player",
-    "RatedPlayersCount_plural": "rated players",
+    "CurrentGamesCount_one": "current game",
+    "CurrentGamesCount_other": "current games",
+    "CompletedGamesCount_one": "completed game",
+    "CompletedGamesCount_other": "completed games",
+    "StandingChallengesCount_one": "standing challenge",
+    "StandingChallengesCount_other": "standing challenges",
+    "RatedPlayersCount_one": "rated player",
+    "RatedPlayersCount_other": "rated players",
     "RatingsList": "{{name}} Ratings",
     "tblHeaderRatingRank": "Rank",
     "tblHeaderRatedPlayer": "Player",
