--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -68,7 +68,7 @@
     "Explore": "Explore",
     "GameAgainst": "{{game}} against {{opp}}",
     "GameIsOver": "The game has ended",
-    "Winning": "Mark this move as winning",
+    "Games": "Games",
     "GoBegin": "Show beginning of game. Keys: Home or 'h'.",
     "GoCurrent": "Show current position. Keys: End or 'l'.",
     "GoNext": "Show next move (and first variant if any). Keys: right arrow or 'k'.",
@@ -196,7 +196,7 @@
     "Waiting": "Waiting on other players to submit their moves",
     "WaitingResponse": "Waiting on response",
     "WelcomePlayer": "Dashboard for {{me}}",
-    "Winning": "Mark this move as winning",
+    "Winning": "Mark this move as winning for this player",
     "WithVariants_zero": ".",
     "WithVariants_one": " with variant {{variants}}.",
     "WithVariants_other": " with variants {{variants}}.",
