Checkpoint. Still chipping away at the play screen, but making progress.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -99,7 +99,7 @@
     "MakeMove": "Make a move",
     "MaxTime": "max time {{max}} hours",
     "Moves": "Moves",
-    "MyDashboard": "Play",
+    "MyDashboard": "Dashboard",
     "NewChallenge": "New challenge",
     "NewProfile": "Create profile",
     "No": "No",
@@ -187,11 +187,13 @@
     "tblHeaderSeating": "Seating",
     "tblHeaderStarted": "Game started",
     "tblHeaderVariants": "Variants",
-    "TimeRemaining": "Time remaining: ",
+    "ThankYouExclaim": "Thank you!",
+    "TimeRemaining": "Time remaining",
     "ToMove": "{{player}} to move.",
     "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of {{game}}",
     "UnratedGame": "This will be an unrated game.",
     "UserSettings": "User Settings",
+    "ValueForValue": "We believe in the \"value for value\" model. If you find this site valuable, consider a donation proportional to that value:",
     "View": "View",
     "Waiting": "Waiting on other players to submit their moves",
     "WaitingResponse": "Waiting on response",
