--- a/public/locales/it/apfront.json
+++ b/public/locales/it/apfront.json
@@ -192,11 +192,13 @@
     "tblHeaderSeating": "",
     "tblHeaderStarted": "",
     "tblHeaderVariants": "",
+    "ThankYouExclaim": "",
     "TimeRemaining": "[IT] Time remaining: ",
     "ToMove": "[IT] {{player}} to move.",
     "TwoPlayersChallengeDescription": "",
     "UnratedGame": "",
     "UserSettings": "[IT] User Settings",
+    "ValueForValue": "",
     "View": "[IT] View",
     "Waiting": "[IT] Waiting on other players to submit their moves",
     "WaitingResponse": "[IT] Waiting on response",
