--- a/public/locales/fr/apfront.json
+++ b/public/locales/fr/apfront.json
@@ -192,11 +192,13 @@
     "tblHeaderSeating": "",
     "tblHeaderStarted": "",
     "tblHeaderVariants": "",
+    "ThankYouExclaim": "",
     "TimeRemaining": "[FR] Time remaining: ",
     "ToMove": "[FR] {{player}} to move.",
     "TwoPlayersChallengeDescription": "",
     "UnratedGame": "",
     "UserSettings": "[FR] User Settings",
+    "ValueForValue": "",
     "View": "[FR] View",
     "Waiting": "[FR] Waiting on other players to submit their moves",
     "WaitingResponse": "[FR] Waiting on response",
