Almost done. Still need to review the modal contents.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -32,7 +32,7 @@
     "ChooseClockStart": "Clock start",
     "ChooseColors": "Choose colors",
     "ChooseGame": "Choose a game: ",
-    "ChooseMove": "Choose move: ",
+    "ChooseMove": "Choose move",
     "ChooseOpponent": "Choose an opponent: ",
     "ChooseRated": "Rated?",
     "Claim": "Claim",
@@ -63,7 +63,7 @@
     "DisplayNameError": "{{name}} is not available, please choose a different name.",
     "EMail": "e-mail",
     "EMailCode": "e-mailed code",
-    "EnterMove": "Enter/Click a move:",
+    "EnterMove": "Enter/Click a move",
     "Error": "Error!",
     "Explore": "Explore",
     "GameAgainst": "{{game}} against {{opp}}",
@@ -146,7 +146,7 @@
     "seatingMeSecond": "Your opponent will play first.",
     "seatingRandom": "Seating will be random.",
     "SeatingRandom": "Random",
-    "Select": "select",
+    "SelectGameDropdown": "select a game",
     "SelectAGame": "Please select a game",
     "SelectAnOpponent": "Please select an opponent",
     "SelectOpponents_one": "",
